package net.Gabou.projectatmosphere.clouds.frontend;

public class CloudShadowRenderer {
}
