package net.Gabou.projectatmosphere.clouds.frontend;

public class FallbackDarkeningPass {
}
